# yalogc

./: CMakeLists.txt  README.md
bench/: README.md  througput_max.cpp
cmake/: googletest.cmake
src/yalogc/: args.h  traits.h
test/: CMakeLists.txt  args_test.cpp  dummy_test.cpp
